...

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relLayout3"
            android:layout_below="@+id/relLayout2"
            android:layout_marginBottom="50dp">

            <RelativeLayout
                android:id="@+id/relLayout4"
                android:layout_width="match_parent"
...
                    android:gravity="center"
                    android:text="Have you found somebody's pet but don't know who owns it?"
                    android:textColor="@color/icon_grey"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/reportFoundPetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/white_rounded_button"
                    android:padding="15dp"
...
